# arch-template

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: test.yaml
src/: hal_impl.rs  lang_items.rs  main.rs
